# ebg_transmission_line_model

./: README.md  pyproject.toml
ebg_transmission_line/: pyproject.toml
src/: ddd.ipynb
