[project]
name = "ebg-transmission-line"
version = "0.1.0"
description = ""
authors = [
    {name = "rainbowtaro",email = "nijiro.pagu@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "scikit-rf (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "ruff (>=0.14.5,<0.15.0)"
]

[tool.poetry]
packages = [{include = "ebg_transmission_line", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
